[project]
name = "ncsn"
version = "0.1.0"
description = "Diffusers implementation of Noise Conditional Score Networks (NCSN) [Yang+ NeuriPS'19]"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diffusers[torch]>=0.31.0,!=0.32.1",
    "einops>=0.7.0",
    "torch>=1.0.0",
    "torchvision>=0.2.1",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
training = [
    "matplotlib>=3.10.0",
]

[dependency-groups]
dev = ["mypy>=1.0.0", "pytest>=6.0.0", "ruff>=0.1.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
